# BigInteger

./: CMakeLists.txt  README.md  big_integer.cpp  big_integer.h  big_integer_testing.cpp  optimized_vector.cpp  optimized_vector.h
gtest/: gtest_main.cc
